tests/expectations/compiler/finalize/private_input_ouput_fail.out
Error [EPAR0370005]: expected { -- found 'finalize_foo'
    --> compiler-test:4:15
     |
   4 |         async finalize_foo(a);
     |               ^^^^^^^^^^^^
